# video-promo-pipeline

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  batch_watch.py  config.example.yaml  config_extra.yaml  docker-compose.gpu.yml  docker-compose.yml  generate_copy.py  process.py  publish-github.ps1  pyproject.toml  requirements-optional.txt  requirements.txt  run.ps1  start-desktop.ps1  start-web.cmd  start.cmd  terminology.example.yaml  web_app.py  worker.py
docs/: DEPLOY.md  USER_GUIDE.md  troubleshooting.md
plugins/: example_plugin.py
prompts/: bilibili_game.md  bilibili_java.md  xiaohongshu.md
scripts/: install-daemon.ps1  install-service.ps1
src/: __init__.py  ab_feedback.py  account_matrix.py  audio_enhance.py  audit_log.py  auto_cut.py  batch_dag.py  batch_report.py  bgm_beat.py  bilibili_oauth.py  bilibili_upload.py  broll.py  browser_publish.py  capcut_export.py  chapter_export.py  chapters.py  clip_short.py  cloud_storage.py  compare_player.py  config_io.py  config_loader.py  config_schema.py  config_wizard.py  copy_enhance.py  copywriter.py  cover.py  cover_ab.py  cover_select.py  dashboard_data.py  distributed_queue.py  dub_ab.py  dubbing.py  export_pack.py  face_crop.py  ffmpeg_installer.py  ffmpeg_utils.py  finetune_bridge.py  finetune_deep.py  gpu_budget.py  gpu_scheduler.py  (+80 more)
tests/: test_copy_enhance.py  test_e2e_pack.py  test_e2e_smoke.py  test_export_pack.py  test_ffmpeg_installer.py  test_finetune_bridge.py  test_narrator.py  test_presets.py  test_progress_tracker.py  test_soft_export.py  test_srt.py  test_subtitle_ass.py  (+11 more)
(+9 files in other folders)
